--- a/src/index.css
+++ b/src/index.css
@@ -24,3 +24,14 @@ body {
     color:white;
     text-shadow: 1px 1px 5px rgba(255, 255, 255, 0.5);
   }
+  h6{
+    font-size: 20px;
+    color:#10A0A2;
+    margin:10px 0px;
+    font-weight: 500;
+  }
+  button {
+    font-weight: normal;
+    font-style: normal;
+    font-family: 'Kanit', sans-serif;
+  }
