--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,8 @@ body {
     font-family: 'Kanit', sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
+    min-width:900px;
+
   }
   @font-face {
     font-family: 'Kanit', sans-serif;
